# Disnake-boilerplate

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.local.yml  main.py  pyproject.toml
.cursor/rules/: backend_guidelines.mdc
bot/: core.py  log.py
bot/commands/: __init__.py
bot/config/: __init__.py  guilds.py  intents.py  settings.py
bot/db/: __init__.py  base.py  session.py
bot/db/migrations/: __init__.py
bot/db/models/: __init__.py
bot/db/repositories/: __init__.py
bot/services/: __init__.py
bot/ui/: __init__.py
tests/: conftest.py
tests/factories/: __init__.py
tests/integration/: __init__.py
